@@ -70,10 +70,10 @@
         <hamcrest.version>2.2</hamcrest.version>
         <hamcrest.optional.version>2.0.0</hamcrest.optional.version>
         <scalecube.version>2.6.12</scalecube.version>
-        <calcite.version>1.29.0</calcite.version>
+        <calcite.version>1.30.0</calcite.version>
         <immutables.version>2.8.8</immutables.version>
         <janino.version>3.1.6</janino.version>
-        <avatica.version>1.19.0</avatica.version>
+        <avatica.version>1.20.0</avatica.version>
         <jsonpath.version>2.4.0</jsonpath.version>
         <classgraph.version>4.8.110</classgraph.version>
         <javassist.version>3.28.0-GA</javassist.version>
@@ -123,6 +123,7 @@
             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens java.base/java.io=ALL-UNNAMED
             --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/java.math=ALL-UNNAMED
             --add-opens java.base/java.util=ALL-UNNAMED
             --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
             -Dio.netty.tryReflectionSetAccessible=true
@@ -567,6 +568,13 @@
             <dependency>
                 <groupId>org.apache.ignite</groupId>
                 <artifactId>ignite-storage-api</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.ignite</groupId>
+                <artifactId>ignite-vault</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
             </dependency>
